correct ooush modal and dashboard card z-indexes

--- a/src/components/ooush-modal/ooushModal.module.scss
+++ b/src/components/ooush-modal/ooushModal.module.scss
@@ -1,5 +1,6 @@
 .ooushModalBlurMask {
     position: fixed;
+    z-index: 998;
     display: flex;
     align-items: center;
     justify-content: center;
