--- a/styles/dashboard.module.scss
+++ b/styles/dashboard.module.scss
@@ -64,7 +64,7 @@
             height: 89vh;
             left: 0;
             transition: all 1s;
-            z-index: 998;
+            z-index: 997;
             background-color: rgba(221, 51, 221, 1.0);
         }
 
@@ -144,7 +144,7 @@
             height: 88vh;
             top: 10vh;
             transition: all 1s;
-            z-index: 999;
+            z-index: 997;
             left: 0;
             background-color: rgba(130, 190, 246, 1.0);
         }
